third_party/move/move-compiler/tests/move_check/expansion/constant_duplicate_struct.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/constant_duplicate_struct.move:4:11
  │
3 │     struct C { }
  │            - Alias previously defined here
4 │     const C: u64 = 0;
  │           ^ Duplicate module member or alias 'C'. Top level names in a namespace must be unique

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:11:15
   │
11 │     use 0x42::mod1;
   │               ^^^^ Unused 'use' of alias 'mod1'. Consider removing it

error[E04001]: restricted visibility
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:18:2
   │
 4 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
18 │     C;
   │     ^ Invalid access of '0x42::mod1::C'

error[E04001]: restricted visibility
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:21:6
   │
 4 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
21 │         C
   │         ^ Invalid access of '0x42::mod1::C'

error[E04001]: restricted visibility
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:23:2
   │
 4 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
23 │     D
   │     ^ Invalid access of '0x42::mod1::C'

error[E04007]: incompatible types
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:23:2
   │
 4 │     const C: u64 = 0;
   │              --- Given: 'u64'
   ·
16 │     fun f1(): 0x42::mod1::C {
   │               ------------- Expected: '0x42::mod1::C'
   ·
23 │     D
   │     ^ Invalid return expression

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:30:15
   │
30 │     use 0x42::mod1;
   │               ^^^^ Unused 'use' of alias 'mod1'. Consider removing it

error[E02010]: invalid name
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:31:26
   │
31 │     use 0x42::mod1::C as mod1;
   │                          ^^^^ Invalid constant alias name 'mod1'. Constant alias names must start with 'A'..'Z'

error[E04007]: incompatible types
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:35:9
   │
35 │     fun f1(): 0x42::mod1::C {
   │         ^^    ------------- Given: '0x42::mod1::C'
   │         │      
   │         Invalid 'script' function return type. The function entry point to a 'script' must have the return type '()'
   │         Expected: '()'

error[E04001]: restricted visibility
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:37:2
   │
 4 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
37 │     C;
   │     ^ Invalid access of '0x42::mod1::C'

error[E04007]: incompatible types
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:38:2
   │  
 4 │       const C: u64 = 0;
   │                --- Given: 'u64'
   ·  
35 │       fun f1(): 0x42::mod1::C {
   │                 ------------- Expected: '0x42::mod1::C'
   ·  
38 │ ╭     {
39 │ │         use 0x42::mod1::C;
40 │ │         C
41 │ │     }
   │ ╰─────^ Invalid return expression

error[E04001]: restricted visibility
   ┌─ tests/move_check/expansion/constant_duplicate_struct.move:40:6
   │
 4 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
40 │         C
   │         ^ Invalid access of '0x42::mod1::C'

